--- a/.github/workflows/check-repos-updates.yml
+++ b/.github/workflows/check-repos-updates.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Clean up
         run: rm -rf kendo-*
-      - name: Install ncu
-        run: ncu -v || npm install npm-check-updates -g
+      #- name: Install ncu
+      #  run: ncu -v || npm install npm-check-updates -g
       - name: Get repos deps
         run: .github/workflows/check-repos-updates.sh ${{ secrets.GH_TOKEN }}
